--- a/net-misc/rsync/files/rsyncd.conf
+++ b/net-misc/rsync/files/rsyncd.conf
@@ -1,3 +1,7 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/files/rsyncd.conf,v 1.2 2004/05/02 22:45:02 mholzer Exp $
+
 # Minimal configuration file for rsync daemon
 # See rsync(1) and rsyncd.conf(5) man pages for help
 
